test/e2e/testdata/httproute-to-backend-fqdn-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-to-fqdn-backend-tls
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend-fqdn-tls
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-fqdn-tls
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-fqdn-tls
  namespace: gateway-conformance-infra
spec:
  endpoints:
    - fqdn:
        hostname: tls-backend-2.gateway-conformance-infra.svc.cluster.local
        port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: backend-fqdn-tls-btls
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-fqdn-tls
  validation:
    caCertificateRefs:
      - name: backend-tls-checks-certificate
        group: ""
        kind: ConfigMap
    hostname: example.com
